Add set-order api upload/update delete
